wouldnt pass even for a webtech proj

--- a/src/nocode/config/agents.yaml
+++ b/src/nocode/config/agents.yaml
@@ -16,3 +16,7 @@ reporting_analyst:
     You're a meticulous analyst with a keen eye for detail. You're known for
     your ability to turn complex data into clear and concise reports, making it
     easy for others to understand and act on the information you provide.
+a:
+  role: a
+  goal: a
+  backstory: a
